--- a/lisum04-w4-Flask/app/requirements.txt
+++ b/lisum04-w4-Flask/app/requirements.txt
@@ -1,6 +1,6 @@
+gunicorn==19.9.0
 flask==1.1.2
-itsdangerous==2.1.0
-jinja2==2.11.3
-MarkupSafe==1.1.1
+tensorflow-cpu==2.3.0
 keras==2.4.3
+pillow==8.3.1
 werkzeug==1.0.1
